# textx-java-gen

./: .gitignore  Model_parse_tree.dot  README.md  install.sh  runtests.sh
domain-lang/: CHANGELOG.md  LICENSE  setup.cfg  setup.py
domain-lang/cobrijani/: domain_lang.tx
domain-lang/domain_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
domain-lang/test/: test_simple_entity.py
domain-lang/test/models/: data_type.mdl
domain_lang/: Model_parse_tree.dot  README.md  runtests.sh  setup.py
domain_lang/cobrijani/: __init__.py
domain_lang/test/models/: entity_cardinality.mdl
domain_lang/tests/: test_simple_entity.py
domain_lang/tests/models/: simple_enums.mdl
domain_proj/: Address.mdl
java_gen/: CHANGELOG.md  README.md  runtests.sh  setup.cfg  setup.py
java_gen/domain_generator/: __init__.py  entity_java.template  generators.py
java_gen/java_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
java_gen/tests/: test_entity_generate.py
java_gen/tests/models/: data_type.mdl  entity_cardinality.mdl  simple_entities.mdl
java_gen/tests/models/entity_cardinality/: ManyToOneNullableCardinality.java  OneToManyCardinality.java  OneToOneCardinality.java  OneToOneNullable2Cardinality.java  OneToOneNullableCardinality.java  ProductItem.java
java_gen/tests/models/simple_entities/: Address.java  Person.java
