[metadata]
name = java_gen
author = Stefan Bratic
author_email = cobrijani@gmail.com
license = MIT
description = Generator for generating spring boot 
keywords = textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    textX
    jinja2
include_package_data = True
package_dir =
    domain_generator = domain_generator

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest
    click


[options.entry_points]
textx_generators =
    domain_generator = domain_generator.generators:gen_def

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90